--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1>Stivali Serna</h1>
         <p>Industrial & Production Engineering student.</p>
         	<div>
-        		<p>I'm a young Venezuelan self-taught programmer and animal lover. <br> I also would like to meet the Guggenheim Museum.</p>
+        		<p>I'm a young Venezuelan self-taught developer and animal lover. <br> I also would like to meet the Guggenheim Museum.</p>
         	</div>
         	<div>
         		<ul style="text-align: center;">
@@ -50,7 +50,7 @@
 	      </div>
 		  <div class="col-md-4">
 			<h3>Interests</h3>
-			<p>Web Development, Computer Programming, Enterprise Information Systems, Environmental Conservation. </p>
+			<p>Computer Science, Web Development, Enterprise Information Systems, Environmental Conservation. </p>
 		  </div>
 		  <div class="col-md-4">
 			<h3>Employment History</h3>
