--- a/index.html
+++ b/index.html
@@ -23,11 +23,8 @@
     <div class="container">
       <div class="jumbotron">
         <h1>Stivali Serna</h1>
-        <p>Industrial & Production Engineering student.</p>
-        	<div>
+        <h2>Industrial & Production Engineering student.</h2>
         		<p>I'm a young Venezuelan self-taught developer and animal lover. <br> I also would like to meet the Guggenheim Museum.</p>
-        	</div>
-        	<div>
         		<ul style="text-align: center;">
         			<li><a href="https://github.com/stivaliserna"><img src="http://cdn.flaticon.com/png/256/25231.png"/></a></li>
         			<li><a href="https://www.linkedin.com/in/st%C3%ADvali-serna-3210b471"><img src="https://image.freepik.com/free-icon/linkedin-logo_318-50643.png"/></a></li>
@@ -36,7 +33,6 @@
         			<li><a href="https://www.instagram.com/stivaliserna/"><img src="https://image.freepik.com/free-icon/instagram-logo_318-53344.png"/></a></li>
         			<li><a href="https://twitter.com/StivaliArantxa"><img src="http://www.clipartbest.com/cliparts/xig/KMo/xigKMoG6T.png"/></a></li>
         		</ul>
-        	</div>
       </div>
     </div> 
 
