--- a/index.html
+++ b/index.html
@@ -1,57 +1,51 @@
 
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
   <head>
-    <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
-    
-    <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
-    
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
-
   <body>
     <div class="nav">
       <div class="container">
-        <ul class="pull-right">
-          <li><i>She believed she could, so she did.</i></li>
-        </ul>
+          <p><i>She believed she could, so she did.</i></p>
       </div>
     </div>
-
     <div class="container">
       <div class="jumbotron">
         <h1>Stivali Serna</h1>
         <h2>Industrial & Production Engineering student.</h2>
-        		<p>I'm a young Venezuelan self-taught developer and animal lover. <br> I also would like to meet the Guggenheim Museum.</p>
-        		<ul style="text-align: center;">
-        			<li><a href="https://github.com/stivaliserna"><img src="http://cdn.flaticon.com/png/256/25231.png"/></a></li>
-        			<li><a href="https://www.linkedin.com/in/st%C3%ADvali-serna-3210b471"><img src="https://image.freepik.com/free-icon/linkedin-logo_318-50643.png"/></a></li>
-        			<li><a href="https://plus.google.com/u/0/109084736249503690578/posts"><img src="https://cdn1.iconfinder.com/data/icons/capsocial/500/google-512.png"/></a></li>
-        			<li><a href="https://www.facebook.com/stivali.serna"><img src="https://image.freepik.com/free-icon/facebook-logo_318-49940.jpg"/></a></li>
-        			<li><a href="https://www.instagram.com/stivaliserna/"><img src="https://image.freepik.com/free-icon/instagram-logo_318-53344.png"/></a></li>
-        			<li><a href="https://twitter.com/StivaliArantxa"><img src="http://www.clipartbest.com/cliparts/xig/KMo/xigKMoG6T.png"/></a></li>
-        		</ul>
+        <p>I'm a young Venezuelan self-taught developer and animal lover. <br> I also would like to meet the Guggenheim Museum.</p>
+        	<ul class="list-inline" style="text-align: center;">
+            <li><a href="https://github.com/stivaliserna"><i class="fa fa-github"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/st%C3%ADvali-serna-3210b471"><i class="fa fa-linkedin-square"></i></a></li>
+            <li><a href="https://plus.google.com/u/0/109084736249503690578/posts"><i class="fa fa-google-plus-square"></i></a></li>
+            <li><a href="https://www.facebook.com/stivali.serna"><i class="fa fa-facebook-square"></i></a></li>
+            <li><a href="https://www.instagram.com/stivaliserna/"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://twitter.com/StivaliArantxa"><i class="fa fa-twitter"></i></a></li>
+        	</ul>
       </div>
-    </div> 
-
-    </div>    
-    <div class="learn-more">
+    </div>     
+  <div class="learn-more">
 	  <div class="container">
-		<div class="row">
+		  <div class="row">
 	      <div class="col-xs-4">
-			<h3>Languages</h3>
-			<p>Native Spanish, English: Conversational.</p>
+			     <h3>Languages</h3>
+			     <p>Native Spanish, English: Conversational.</p>
 	      </div>
-		  <div class="col-xs-4">
-			<h3>Interests</h3>
-			<p>Computer Science, Web Development, Enterprise Information Systems, Environmental Conservation. </p>
-		  </div>
-		  <div class="col-xs-4">
-			<h3>Employment History</h3>
-			<p>Planning Engineer, Cargill de Venezuela.</p>
-		  </div>
+		    <div class="col-xs-4">
+			     <h3>Interests</h3>
+			     <p>Computer Science, Web Development, Enterprise Information Systems, Environmental Conservation. </p>
+		    </div>
+		    <div class="col-xs-4">
+			     <h3>Employment History</h3>
+			     <p>Planning Engineer, Cargill de Venezuela.</p>
+		    </div>
 	    </div>
 	  </div>
 	</div>
