--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
   <div class="learn-more">
 	  <div class="container">
 		  <div class="row">
-	      <div class="col-xs-4">
+	      <div class="col-md-4">
 			     <h3>Languages</h3>
 			     <p>Native Spanish, English: Conversational.</p>
 	      </div>
-		    <div class="col-xs-4">
+		    <div class="col-md-4">
 			     <h3>Interests</h3>
 			     <p>Computer Science, Web Development, Enterprise Information Systems, Environmental Conservation. </p>
 		    </div>
-		    <div class="col-xs-4">
+		    <div class="col-md-4">
 			     <h3>Employment History</h3>
 			     <p>Planning Engineer, Cargill de Venezuela.</p>
 		    </div>
