Change CSS on <480px screens

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </div>
     <div class="container">
       <div class="jumbotron">
+        <div class="image"></div>
         <h1>Stívali Serna</h1>
         <h2>Industrial & Production Engineering student.</h2>
         <p>I'm a young Venezuelan self-taught developer and animal lover. <br> I also would like to meet the Guggenheim Museum.</p>
@@ -34,15 +35,15 @@
   <div class="learn-more">
 	  <div class="container">
 		  <div class="row">
-	      <div class="col-xs-4">
+	      <div class="col-sm-4">
 			     <h3>Languages</h3>
 			     <p>Native Spanish, English: Conversational.</p>
 	      </div>
-		    <div class="col-xs-4">
+		    <div class="col-sm-4">
 			     <h3>Interests</h3>
 			     <p>Computer Science, Web Development, Enterprise Information Systems, Environmental Conservation. </p>
 		    </div>
-		    <div class="col-xs-4">
+		    <div class="col-sm-4">
 			     <h3>Employment History</h3>
 			     <p>Planning Engineer, Cargill de Venezuela.</p>
 		    </div>
