--- a/index.html
+++ b/index.html
@@ -1,58 +1,52 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+	<meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Cabin:400,400i|Josefin+Slab:700" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="apple-touch-icon-precomposed" href="img/favicon-152.png">
   <meta name="msapplication-TileColor" content="#FFFFFF">
   <meta name="msapplication-TileImage" content="img/favicon-144.png">
-  <title>Stívali Serna</title>
+	<title>Stívali Serna</title>
 </head>
 <body>
-  <div class="nav">
-    <div class="container">
-      <p><i>She believed she could, so she did.</i></p>
-    </div>
-  </div>
-  <div class="container">
-    <div class="jumbotron">
-      <div class="image"></div>
-      <h1>Stívali Serna</h1>
-      <h2>Industrial & Production Engineering student.</h2>
-      <p>I'm a young Venezuelan self-taught developer and animal lover. <br> I also would like to meet the Guggenheim Museum.</p>
-      <ul class="list-inline" style="text-align: center;">
-        <li><a href="https://github.com/stivaliserna"><i class="fa fa-github"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/st%C3%ADvali-serna-3210b471"><i class="fa fa-linkedin-square"></i></a></li>
-        <li><a href="https://plus.google.com/u/0/109084736249503690578/posts"><i class="fa fa-google-plus-square"></i></a></li>
-        <li><a href="https://www.facebook.com/stivali.serna"><i class="fa fa-facebook-square"></i></a></li>
-        <li><a href="https://www.instagram.com/stivaliserna/"><i class="fa fa-instagram"></i></a></li>
-        <li><a href="https://twitter.com/StivaliArantxa"><i class="fa fa-twitter"></i></a></li>
-      </ul>
-    </div>
-  </div>     
-  <div class="learn-more">
-   <div class="container">
-    <div class="row">
-     <div class="col-sm-4">
-      <h3>Languages</h3>
-      <p>Native Spanish, English: Conversational.</p>
-    </div>
-    <div class="col-sm-4">
-      <h3>Interests</h3>
-      <p>Computer Science, Web Development, Enterprise Information Systems, Environmental Conservation. </p>
-    </div>
-    <div class="col-sm-4">
-      <h3>Employment History</h3>
-      <p>Planning Engineer, Cargill de Venezuela.</p>
-    </div>
-  </div>
-</div>
-</div>
+	<header>
+			<div class="nav">
+				<div class="line"></div>
+				<div class="quote">She believed she could, so she did.</div>
+			</div>
+	</header>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-2">
+				<div class="avatar"></div>
+			</div>
+			<div class="col-sm-10">
+				<h1>Stívali Serna</h1>
+			</div>
+		</div>
+    <h3>WEB DEVELOPER</h3>
+    <h4>Frontend | Backend | User Experience</h4>
+    <div class="break"></div>
+    <p class="intro">I'm a young Industrial & Production Engineer, with a background in web design and development. I'm very passionate about building for the web and create amazing things. I also would like to meet the Guggenheim Museum.</p>
+    <p class="mail">Suggest something interesting by sending me an <a href="mailto:stivaliserna08@gmail.com">email</a></p>
+    <p class="intro">...or you can join me in my social haunts <i class="fa fa-caret-down" aria-hidden="true"></i></p>
+    <ul class="list-inline social">
+      <li><a href="https://github.com/stivaliserna"><i class="fa fa-github-alt" aria-hidden="true"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/st%C3%ADvali-serna-3210b471"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+      <li><a href="https://plus.google.com/u/0/109084736249503690578/posts"><i class="fa fa-google-plus" aria-hidden="true"></i></i></a></li>
+    </ul>
+	</div>
+
+	<footer>
+		<div>
+			<p class="legal">&copy; 2017 Stívali Serna. All rights reserved.</p>
+		</div>
+	</footer>
 </body>
 </html>
