Make responsive view for bigger devices

--- a/index.html
+++ b/index.html
@@ -23,17 +23,19 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-2">
-				<div class="avatar"></div>
+			<div class="col-sm-4">
+				<div class="avatar img-circle"></div>
 			</div>
-			<div class="col-sm-10">
+			<div class="col-sm-8">
 				<h1>Stívali Serna</h1>
 			</div>
 		</div>
     <h3>WEB DEVELOPER</h3>
     <h4>Frontend | Backend | User Experience</h4>
     <div class="break"></div>
-    <p class="intro">I'm a young Industrial & Production Engineer, with a background in web design and development. I'm very passionate about building for the web and create amazing things. I also would like to meet the Guggenheim Museum.</p>
+    <div class="intro">
+    	<p>I'm a young Industrial & Production Engineer, with a background in web design and development. I'm very passionate about building for the web and create amazing things. I also would like to meet the Guggenheim Museum.</p>
+    </div>
     <p class="mail">Suggest something interesting by sending me an <a href="mailto:stivaliserna08@gmail.com">email</a></p>
     <p class="intro">...or you can join me in my social haunts <i class="fa fa-caret-down" aria-hidden="true"></i></p>
     <ul class="list-inline social">
@@ -48,5 +50,7 @@
 			<p class="legal">&copy; 2017 Stívali Serna. All rights reserved.</p>
 		</div>
 	</footer>
+
+	<script src="js/main.js"></script>
 </body>
 </html>
