--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <ul class="list-inline social">
       <li><a href="https://github.com/stivaliserna"><i class="fa fa-github-alt" aria-hidden="true"></i></a></li>
       <li><a href="https://www.linkedin.com/in/st%C3%ADvali-serna-3210b471"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-      <li><a href="https://plus.google.com/u/0/109084736249503690578/posts"><i class="fa fa-google-plus" aria-hidden="true"></i></i></a></li>
+      <li><a href="https://www.instagram.com/stivaliserna/"><i class="fa fa-instagram" aria-hidden="true"></i></i></a></li>
     </ul>
 	</div>
 
