--- a/v2/index.html
+++ b/v2/index.html
@@ -6,54 +6,95 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="./css/main.css">
+	<link href="https://fonts.googleapis.com/css?family=Poiret+One|Quicksand&display=swap" rel="stylesheet">
 	<title>Document</title>
 </head>
 
 <body>
-	<svg class="code-bubble" xmlns="http://www.w3.org/2000/svg" xmlns:vectornator="http://vectornator.io"
-		fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" clip-rule="evenodd"
-		viewBox="0 0 3370.81 2384.24">
-		<path fill="#fa86a2"
-			d="M536.295 1187.74C536.295 573.19 1031.23 75 1641.75 75c610.53 0 1105.46 498.19 1105.46 1112.74s-494.93 1112.74-1105.46 1112.74c-610.52 0-1105.455-498.19-1105.455-1112.74z"
-			vectornator:layerName="Layer 3" />
-		<g vectornator:layerName="Layer 2">
-			<path fill="#022d55"
-				d="M1103.35 416.806h1081c24.87 0 45.02 20.099 45.02 44.892V1859.37c0 24.79-20.15 44.89-45.02 44.89h-1081c-24.86 0-45.02-20.1-45.02-44.89V461.698c0-24.793 20.16-44.892 45.02-44.892z" />
-			<path fill="#cc4452"
-				d="M1132 492.208c0-12.817 10.57-23.208 23.61-23.208s23.61 10.391 23.61 23.208c0 12.817-10.57 23.208-23.61 23.208S1132 505.025 1132 492.208z" />
-			<path fill="#ea9a00"
-				d="M1192.4 492.978c0-12.817 10.57-23.208 23.61-23.208s23.61 10.391 23.61 23.208c0 12.818-10.57 23.208-23.61 23.208s-23.61-10.39-23.61-23.208z" />
-			<path fill="#bdf971"
-				d="M1252.79 492.208c0-12.817 10.57-23.208 23.61-23.208s23.61 10.391 23.61 23.208c0 12.817-10.57 23.208-23.61 23.208s-23.61-10.391-23.61-23.208z" />
-			<g class="lines">
-				<path fill="none" stroke="#ea9a00" stroke-width="24.8" d="M1143 632.384l628.02-2.769" />
-				<path fill="none" stroke="#bdf971" stroke-width="24.8" d="M1143 681.947l317.02-2.769" />
-				<path fill="none" stroke="#ea9a00" stroke-width="24.8" d="M1143 730.626l194.37-1.002" />
-				<path fill="none" stroke="#cc4452" stroke-width="24.8" d="M1143 780.188l186.4-1.001" />
-				<path fill="none" stroke="#66becb" stroke-width="24.8" d="M1143 829.751l194.37-1.002" />
-				<path fill="none" stroke="#bdf971" stroke-width="24.8" d="M1143 928.876l301.58-1.002" />
-				<path fill="none" stroke="#bdf971" stroke-width="24.8" d="M1143 978.438l491.09-1.001" />
-				<path fill="none" stroke="#66becb" stroke-width="24.8" d="M1143 1028l640.37-1" />
-				<path fill="none" stroke="#ff3b77" stroke-width="24.8" d="M1143 1077.56l475.82-1" />
-				<path fill="none" stroke="#ea9a00" stroke-width="24.8" d="M1143 1127.13l402.77-1.01" />
-				<path fill="none" stroke="#cc4452" stroke-width="24.8" d="M1143 1176.69l527.87-1" />
-				<path fill="none" stroke="#66becb" stroke-width="24.8" d="M1143 1226.25l376.37-1" />
-				<path fill="none" stroke="#ff3b77" stroke-width="24.8" d="M1143 1275.81l643.66-1" />
-				<path fill="none" stroke="#bdf971" stroke-width="24.8" d="M1136 1325.38l648.38-1.01" />
-				<path fill="none" stroke="#66becb" stroke-width="24.8" d="M1143 1424.5l389.72-1" />
-				<path fill="none" stroke="#66becb" stroke-width="24.8" d="M1143 1474.06l393.41-1" />
-				<path fill="none" stroke="#66becb" stroke-width="24.8" d="M1143 1523.63l402.99-1.01" />
-				<path fill="none" stroke="#ea9a00" stroke-width="24.8" d="M1143 1573.19l739-1" />
-				<path fill="none" stroke="#ff3b77" stroke-width="24.8" d="M1143 1622.75l646.7-1" />
-				<path fill="none" stroke="#ea9a00" stroke-width="24.8" d="M1143 1672.31l409.2-1" />
-				<path fill="none" stroke="#bdf971" stroke-width="24.8" d="M1143 1721.88l537.21-1.01" />
-				<path fill="none" stroke="#cc4452" stroke-width="24.8" d="M1143 1771.44l286.55-1" />
-				<path fill="none" stroke="#ff3b77" stroke-width="24.8" d="M1143 1821l424.65-1" />
-			</g>
-		</g>
-		<path class="select-all" fill="#54e3eb" d="M1094.89 581.151h837.7V1863.87h-837.7V581.151z" opacity=".342"
-			vectornator:layerName="Layer 1" />
-	</svg>
+	<div class="wrapper">
+		<h1 class="title">Stivali Serna</h1>
+		<h4 class="subtitle">Web Developer</h4>
+		<div class="bubbles">
+			<svg class="draw-bubble" width="790" height="785" viewBox="0 0 790 785" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M0 392.5C0 175.728 176.687 0 394.643 0C612.598 0 789.286 175.728 789.286 392.5C789.286 609.272 612.598 785 394.643 785C176.687 785 0 609.272 0 392.5Z" fill="#F27830"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M225.591 136.001L585.019 140.255C592.961 140.35 599.433 146.724 599.474 154.494L602.078 646.101C602.119 653.871 595.714 660.093 587.772 659.999L228.345 655.745C220.403 655.651 213.931 649.276 213.89 641.507L211.285 149.899C211.244 142.129 217.649 135.907 225.591 136.001Z" fill="white" stroke="#BEBEBE" stroke-width="10.98" stroke-linecap="round" stroke-linejoin="round"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M400.793 163.18C401.397 161.349 403.362 160.35 405.182 160.951C407.002 161.551 407.987 163.523 407.383 165.354C406.779 167.186 404.814 168.184 402.994 167.584C401.174 166.983 400.189 165.012 400.793 163.18V163.18Z" fill="#404040"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M398.246 626.397C400.172 620.558 406.373 617.356 412.097 619.244C417.821 621.133 420.9 627.397 418.974 633.235C417.048 639.073 410.846 642.276 405.122 640.387C399.398 638.499 396.32 632.235 398.246 626.397Z" fill="white" stroke="#BEBEBE" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M258.354 177.639L554.868 180.134C561.42 180.189 566.777 185.43 566.832 191.839L570.361 597.383C570.417 603.792 565.151 608.944 558.599 608.888L262.085 606.393C255.533 606.338 250.176 601.098 250.121 594.688L246.592 189.144C246.536 182.735 251.802 177.584 258.354 177.639V177.639Z" fill="#404040"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M263.784 218.439L530.477 218.822L530.002 585.365L263.309 584.982L263.784 218.439V218.439Z" fill="white"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M436.794 205.968L549.126 205.47C549.687 205.467 550.225 205.688 550.623 206.082C551.021 206.476 551.246 207.013 551.248 207.573L552.944 590.125C552.946 590.402 552.892 590.677 552.787 590.934C552.682 591.191 552.528 591.424 552.333 591.621C552.137 591.818 551.905 591.975 551.649 592.082C551.393 592.189 551.119 592.245 550.841 592.246L438.509 592.745C437.949 592.747 437.411 592.527 437.014 592.132C436.616 591.738 436.391 591.202 436.388 590.642L434.691 208.09C434.69 207.812 434.743 207.537 434.848 207.281C434.953 207.024 435.108 206.79 435.303 206.593C435.499 206.396 435.731 206.239 435.987 206.132C436.243 206.025 436.517 205.969 436.794 205.968V205.968Z" fill="#262626"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M456.267 252.659C463.28 231.403 486.969 220.111 509.178 227.438C531.387 234.765 543.706 257.936 536.694 279.192C529.681 300.449 505.992 311.741 483.783 304.414C461.574 297.087 449.255 273.916 456.267 252.659V252.659Z" fill="#404040"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M473.934 258.049C485.778 247.912 485.141 270.775 486.627 274.062C488.114 277.349 489.063 277.943 491.549 277.434C494.924 276.743 496.522 273.828 497.601 271.548C500.465 265.493 508.857 241.72 524.779 254.898C526.577 256.386 527.857 258.173 529.396 259.81L529.334 259.855C527.764 258.321 526.402 256.655 524.624 255.254C516.916 249.18 511.836 259.463 509.271 264.773C506.371 270.777 498.946 284.18 490.701 284.832C487.041 285.121 482.658 280.744 481.796 275.597C480.054 265.186 483.793 250.641 474.558 258.298" fill="#BEBEBE"/>
+				<path d="M453.652 331.177L533.506 331.017" stroke="#7F7F7F" stroke-width="9.89" stroke-linecap="round" stroke-linejoin="round"/>
+				<path d="M453.652 348.223L533.504 347.634" stroke="#7F7F7F" stroke-width="9.89" stroke-linecap="round" stroke-linejoin="round"/>
+				<path d="M453.652 366.469L533.506 366.107" stroke="#7F7F7F" stroke-width="9.89" stroke-linecap="round" stroke-linejoin="round"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M456.016 403.113L531.102 402.994L531.139 426.567L456.054 426.686L456.016 403.113Z" fill="#6D6D6D" stroke="#6D6D6D" stroke-width="9.89" stroke-linecap="round" stroke-linejoin="round"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M456.016 518.001L531.102 517.79L531.139 559.653L456.054 559.865L456.016 518.001Z" fill="#6D6D6D" stroke="#6D6D6D" stroke-width="9.89" stroke-linecap="round" stroke-linejoin="round"/>
+				<path d="M478.734 455.801L508.421 456.055" stroke="#7F7F7F" stroke-width="9.89" stroke-linecap="round" stroke-linejoin="round"/>
+				<path d="M478.734 470.296L508.422 470.104" stroke="#7F7F7F" stroke-width="9.89" stroke-linecap="round" stroke-linejoin="round"/>
+				<path d="M478.734 485.57L508.422 485.716" stroke="#7F7F7F" stroke-width="9.89" stroke-linecap="round" stroke-linejoin="round"/>
+				<path d="M355.414 418.258L355.851 584.582" stroke="#2C7646" stroke-width="5.99" stroke-linecap="round" stroke-linejoin="round"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M353.299 428.064L292.57 353.892L353.299 279.719L414.027 353.892L353.299 428.064V428.064Z" fill="#9E85A6" stroke="#210A2F" stroke-width="5.13" stroke-linecap="round" stroke-linejoin="round"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M353.855 354.086L276.836 346.778L298.824 294.855L353.855 354.086V354.086Z" fill="#845C90" stroke="#210A2F" stroke-width="5.13" stroke-linecap="round" stroke-linejoin="round"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M353.629 355.163L378.793 278.126L423.951 311.335L353.629 355.163Z" fill="#845C90" stroke="#210A2F" stroke-width="5.13" stroke-linecap="round" stroke-linejoin="round"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M354.293 353.729L394.843 429.734L323.465 432.473L354.293 353.729V353.729Z" fill="#845C90" stroke="#210A2F" stroke-width="5.13" stroke-linecap="round" stroke-linejoin="round"/>
+			</svg>
+				
+			<svg class="code-bubble" width="2212" height="2226" viewBox="0 0 2212 2226" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M0.294922 1112.74C0.294922 498.19 495.23 0 1105.75 0C1716.28 0 2211.21 498.19 2211.21 1112.74C2211.21 1727.29 1716.28 2225.48 1105.75 2225.48C495.23 2225.48 0.294922 1727.29 0.294922 1112.74Z" fill="#D9305D"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M567.35 341.806H1648.35C1673.22 341.806 1693.37 361.905 1693.37 386.698V1784.37C1693.37 1809.16 1673.22 1829.26 1648.35 1829.26H567.35C542.49 1829.26 522.33 1809.16 522.33 1784.37V386.698C522.33 361.905 542.49 341.806 567.35 341.806Z" fill="#022D55"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M596 417.208C596 404.391 606.57 394 619.61 394C632.65 394 643.22 404.391 643.22 417.208C643.22 430.025 632.65 440.416 619.61 440.416C606.57 440.416 596 430.025 596 417.208Z" fill="#CC4452"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M656.4 417.978C656.4 405.161 666.97 394.77 680.01 394.77C693.05 394.77 703.62 405.161 703.62 417.978C703.62 430.796 693.05 441.186 680.01 441.186C666.97 441.186 656.4 430.796 656.4 417.978Z" fill="#EA9A00"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M716.791 417.208C716.791 404.391 727.361 394 740.401 394C753.441 394 764.011 404.391 764.011 417.208C764.011 430.025 753.441 440.416 740.401 440.416C727.361 440.416 716.791 430.025 716.791 417.208Z" fill="#BDF971"/>
+				<g class="lines">
+					<path d="M607 557.383L1235.02 554.614" stroke="#EA9A00" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M607 606.947L924.02 604.178" stroke="#BDF971" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M607 655.626L801.37 654.624" stroke="#EA9A00" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M607 705.188L793.4 704.187" stroke="#CC4452" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M607 754.751L801.37 753.749" stroke="#66BECB" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M607 853.876L908.58 852.874" stroke="#BDF971" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M607 903.438L1098.09 902.437" stroke="#BDF971" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M607 953L1247.37 952" stroke="#66BECB" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M607 1002.56L1082.82 1001.56" stroke="#FF3B77" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M607 1052.13L1009.77 1051.12" stroke="#EA9A00" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M607 1101.69L1134.87 1100.69" stroke="#CC4452" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M607 1151.25L983.37 1150.25" stroke="#66BECB" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M607 1200.81L1250.66 1199.81" stroke="#FF3B77" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M600 1250.38L1248.38 1249.37" stroke="#BDF971" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M607 1349.5L996.72 1348.5" stroke="#66BECB" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M607 1399.06L1000.41 1398.06" stroke="#66BECB" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M607 1448.63L1009.99 1447.62" stroke="#66BECB" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M607 1498.19L1346 1497.19" stroke="#EA9A00" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M607 1547.75L1253.7 1546.75" stroke="#FF3B77" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M607 1597.31L1016.2 1596.31" stroke="#EA9A00" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M607 1646.88L1144.21 1645.87" stroke="#BDF971" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M607 1696.44L893.55 1695.44" stroke="#CC4452" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M607 1746L1031.65 1745" stroke="#FF3B77" stroke-width="24.8" stroke-linecap="round" stroke-linejoin="round"/>
+				</g>
+				<path class="select-all" opacity="0.342246" fill-rule="evenodd" clip-rule="evenodd" d="M558.891 506.151H1396.59V1788.87H558.891V506.151Z" fill="#54E3EB"/>
+			</svg>
+	
+			<svg class="blender-bubble" width="2242" height="2226" viewBox="0 0 2242 2226" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M0 1113.26C0 498.714 501.84 0.525391 1120.88 0.525391C1739.93 0.525391 2241.76 498.714 2241.76 1113.26C2241.76 1727.81 1739.93 2226 1120.88 2226C501.84 2226 0 1727.81 0 1113.26Z" fill="#03A696"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M370.593 513.73H1871.17C1881.11 513.73 1889.18 521.793 1889.18 531.737V1694.79C1889.18 1704.73 1881.11 1712.79 1871.17 1712.79H370.593C360.649 1712.79 352.588 1704.73 352.588 1694.79V531.737C352.588 521.793 360.649 513.73 370.593 513.73Z" fill="#404040" stroke="#262626" stroke-width="20.67" stroke-linecap="round" stroke-linejoin="round"/>
+				<path d="M367 589L1496 1694" stroke="#CC4452" stroke-width="15.61" stroke-linecap="round" stroke-linejoin="round"/>
+				<path d="M371 1380L1867 1037" stroke="#BDF971" stroke-width="15.61" stroke-linecap="round" stroke-linejoin="round"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M861.46 1075.53L860.15 1267.27L945.51 1365.77L1154.33 1331.63L1156.96 1103.11L1076.85 1036.13L861.46 1075.53Z" fill="#7F7F7F" stroke="#EA9A00" stroke-width="15.12" stroke-linejoin="round"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M950.771 1153.02L1145.22 1113.7L950.771 1153.02ZM949.451 1158.27L946.831 1348.79L949.451 1158.27ZM873.281 1086.18L949.451 1153.02Z" fill="#6D6D6D"/>
+				<path d="M873.281 1086.18L949.451 1153.02M950.771 1153.02L1145.22 1113.7L950.771 1153.02ZM949.451 1158.27L946.831 1348.79L949.451 1158.27Z" stroke="#6D6D6D" stroke-width="10.11" stroke-linecap="round" stroke-linejoin="round"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M1562.14 576.422H1837.59C1849.01 576.422 1858.27 584.573 1858.27 594.629V1631.24C1858.27 1641.3 1849.01 1649.45 1837.59 1649.45H1562.14C1550.72 1649.45 1541.46 1641.3 1541.46 1631.24V594.629C1541.46 584.573 1550.72 576.422 1562.14 576.422Z" fill="#2A2A2A"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M1599.54 626.052L1813.53 625.948L1599.54 626.052ZM1606.11 1013.76L1820.11 1013.2Z" fill="#7F7F7F"/>
+				<path d="M1606.11 1013.76L1820.11 1013.2M1599.54 626.052L1813.53 625.948L1599.54 626.052Z" stroke="#7F7F7F" stroke-width="20.67" stroke-linecap="round" stroke-linejoin="round"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M1637.71 1086.55L1809.68 1085.99L1637.71 1086.55ZM1640.26 1166.66L1812.23 1166.1L1640.26 1166.66ZM1640.26 1241.52L1812.23 1240.96L1640.26 1241.52ZM1640.26 1315.07L1812.23 1314.51L1640.26 1315.07ZM1637.71 1390.68L1809.68 1390.12L1637.71 1390.68ZM1637.71 1468.17L1809.68 1467.61L1637.71 1468.17ZM1636.32 1538.33L1808.29 1537.77L1636.32 1538.33ZM1637.71 1608.69L1809.68 1608.14Z" fill="#7F7F7F"/>
+				<path d="M1637.71 1608.69L1809.68 1608.14M1637.71 1086.55L1809.68 1085.99L1637.71 1086.55ZM1640.26 1166.66L1812.23 1166.1L1640.26 1166.66ZM1640.26 1241.52L1812.23 1240.96L1640.26 1241.52ZM1640.26 1315.07L1812.23 1314.51L1640.26 1315.07ZM1637.71 1390.68L1809.68 1390.12L1637.71 1390.68ZM1637.71 1468.17L1809.68 1467.61L1637.71 1468.17ZM1636.32 1538.33L1808.29 1537.77L1636.32 1538.33Z" stroke="#404040" stroke-width="20.67" stroke-linecap="round" stroke-linejoin="round"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M1593.7 1067.6L1592.98 1105.17L1593.7 1067.6ZM1593.7 1144.3L1592.98 1181.86L1593.7 1144.3ZM1593.7 1218.64L1592.98 1256.2L1593.7 1218.64ZM1593.7 1294.02L1592.98 1331.58L1593.7 1294.02ZM1593.7 1370.98L1592.98 1408.55L1593.7 1370.98ZM1593.7 1447.16L1592.98 1484.72L1593.7 1447.16ZM1593.7 1523.33L1592.98 1560.9L1593.7 1523.33ZM1593.7 1598.71L1592.98 1615.7Z" fill="#7F7F7F"/>
+				<path d="M1593.7 1598.71L1592.98 1615.7M1593.7 1067.6L1592.98 1105.17L1593.7 1067.6ZM1593.7 1144.3L1592.98 1181.86L1593.7 1144.3ZM1593.7 1218.64L1592.98 1256.2L1593.7 1218.64ZM1593.7 1294.02L1592.98 1331.58L1593.7 1294.02ZM1593.7 1370.98L1592.98 1408.55L1593.7 1370.98ZM1593.7 1447.16L1592.98 1484.72L1593.7 1447.16ZM1593.7 1523.33L1592.98 1560.9L1593.7 1523.33Z" stroke="#7F7F7F" stroke-width="20.67" stroke-linecap="round" stroke-linejoin="round"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M1603.49 686.785H1799.17V748.511H1603.49V686.785Z" fill="#7F7F7F"/>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M1638 810.238L1767.29 809.667L1638 810.238ZM1638 864.654L1767.29 864.084L1638 864.654ZM1638 921.13L1767.29 920.56Z" fill="#7F7F7F"/>
+				<path d="M1638 921.13L1767.29 920.56M1638 810.238L1767.29 809.667L1638 810.238ZM1638 864.654L1767.29 864.084L1638 864.654Z" stroke="#404040" stroke-width="20.67" stroke-linecap="round" stroke-linejoin="round"/>
+			</svg>	
+		</div>
+	</div>
 </body>
 
 <script type="text/javascript" src="./js/main.js"></script>
