--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap-reboot.min.css" integrity="sha256-pTFzHsh1e+rz97pjNUpygMbwPzZM3iI3jPd9k4PBTko=" crossorigin="anonymous">
 		<link rel="stylesheet" href="./css/main.css" />
 		<link
 			href="https://fonts.googleapis.com/css?family=Poiret+One|Quicksand&display=swap"
@@ -13,6 +14,7 @@
 			rel="stylesheet"
 			href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
 		/>
+		<link rel="icon" href="./favicon.ico" type="image/x-icon"/>
 		<title>Stivali Serna — Web Developer</title>
 	</head>
 
@@ -25,9 +27,11 @@
 			<div class="info">
 				<p class="description">
 					I’ve been doing fun stuff for the web the last two years and currently
-					I’m a Software Developer at ThoughtWorks Spain. I’m really into web
-					animations, digital illustration and 3D modeling. I also would like to
-					meet the Guggenheim Museum.
+					I’m a Software Developer at
+					<a class="work" href="https://www.thoughtworks.com/locations/spain"
+						>ThoughtWorks Spain</a
+					>. I’m really into web animations, digital illustration and 3D
+					modeling. I also would like to meet the Guggenheim Museum.
 				</p>
 				<div class="social">
 					<!-- https://fontawesome.com/license -->
