Add CodePen link

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 					<a class="social-link" href="mailto:stivaliserna08@gmail.com">
 						<img src="./img/envelope.svg" alt="Email icon" />
 					</a>
+					<a class="social-link" href="https://codepen.io/stivaliserna">
+						<img src="./img/codepen.svg" alt="CodePen logo" />
+					</a>
 				</div>
 			</div>
 			<svg
