--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 			</div>
 			<div class="info">
 				<p class="description">
-					I’ve been doing fun stuff for the web the last two years and currently
-					I’m a Software Developer at
-					<a class="work" href="https://www.thoughtworks.com/locations/spain"
-						>ThoughtWorks Spain</a
-					>. I’m really into web animations, digital illustration and 3D
-					modeling. I also would like to meet the Guggenheim Museum.
+					I've been doing fun stuff for the web the last five years and currently
+					I'm a Software Developer at
+					<a class="work" href="https://www.adevinta.com/"
+						>Adevinta Spain</a
+					>. I'm really into web animations, digital illustration and 3D
+					modeling. I also would like to visit the Guggenheim Museum.
 				</p>
 				<div class="social">
 					<!-- https://fontawesome.com/license -->
@@ -40,7 +40,7 @@
 					</a>
 					<a
 						class="social-link"
-						href="https://www.linkedin.com/in/st%C3%ADvali-serna-3210b471"
+						href="https://www.linkedin.com/in/stivaliserna/"
 					>
 						<img src="./img/linkedin.svg" alt="LinkedIn logo" />
 					</a>
